name:                auto-playlist
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/auto-playlist#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AutoPlaylist.Api 
                       AutoPlaylist.Environment
                       Spotify.Api
                       Spotify.Auth.Client
                       Spotify.Auth.User
                       Spotify.Types.Playlist
                       Spotify.Types.Track
                       Spotify.Types.PagingObject
                       Spotify.Types.User
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , base64-bytestring
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , http-client
                     , http-types
                     , http-media
                     , http-client-tls
                     , http-api-data
                     , mtl
                     , servant 
                     , servant-client 
                     , servant-server
                     , Spock
                     , stm
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010

executable auto-playlist-server
  hs-source-dirs:      web
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , auto-playlist
                     , bytestring
                     , mtl
                     , text
                     , Spock
                     , transformers
                     , stm
                     , http-client
                     , aeson
                     , containers
                     , wai
                     , wai-middleware-static
  default-language:    Haskell2010
  other-modules:       Server.Utils

test-suite auto-playlist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , auto-playlist
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/auto-playlist
