name:                auto-playlist-app 
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, ../src
  exposed-modules:     Lib
                     , App
                     , AutoPlaylist.Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , http-client
                     , http-types
                     , http-media
                     , http-client-tls
                     , http-api-data
                     , mtl
                     , reflex 
                     , reflex-dom
                     , servant 
                     , servant-client 
                     , servant-server
                     , Spock
                     , stm
                     , text
                     , time
                     , transformers
                     , wai
  default-language:    Haskell2010

executable auto-playlist-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       auto-playlist-app
  default-language:    Haskell2010

test-suite auto-playlist-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , auto-playlist-app 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
