name:                frontend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, ../src
  exposed-modules:     App
  other-modules:       Spotify.Types.Auth
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , containers
                     , unordered-containers
                     , directory
                     , filepath
                     , http-client
                     , http-types
                     , http-media
                     , http-client-tls
                     , http-api-data
                     , ghcjs-base
                     , mtl
                     , reflex 
                     , reflex-dom
                     , servant 
                     , servant-client 
                     , servant-server
                     , Spock
                     , stm
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-middleware-static
  default-language:    Haskell2010

executable auto-playlist-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       frontend
  default-language:    Haskell2010

test-suite auto-playlist-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , frontend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
